Mostly fixed printing -- PDFs are generated and everything looks spiffy. Still some work to be done re: race titles and actual physical printing